fix spacing on mobile with new content-single layout

--- a/assets/less/jomi/sidebar.less
+++ b/assets/less/jomi/sidebar.less
@@ -21,18 +21,20 @@
   }
   .author{
     display:block;
-    margin-bottom:10px;
-    background: #f8f8f8;
-    border:3px solid #eee;
+    margin-bottom:5px;
+    //background: #f8f8f8;
+    //border:3px solid #eee;
     color:#111 !important;
-    text-decoration: none;
+    //text-decoration: none;
     &:hover {
-      border:3px solid #428bca;
+      //border:3px solid #428bca;
+      background: #f8f8f8;
     }
     h4{
       font-size: 14px;
       font-weight:700;
-      margin:5px 0;
+      margin: 0px;
+      margin-bottom: 5px;
     }
     h5{
       font-size: 12px;
@@ -41,16 +43,17 @@
       margin-bottom: 0;
     }
     .avatar{
-      float: left;
-      margin-right:5px;
+      //float: left;
+      //margin-right:5px;
       img{
-         width: 64px;
+         width: 100%;
       }
     }
     .bio{
-      width: 100%;
-    display: block;
-    padding-left: 5px;
+      border-left: 1px solid #aaa;
+      //width: 100%;
+      //display: block;
+      //padding-left: 5px;
     }
   }
   table.info {
