--- a/assets/less/jomi/single.less
+++ b/assets/less/jomi/single.less
@@ -6,18 +6,22 @@
 .single {
 	.preprint-container{
 		padding: 0 0px;
+
+	    margin-top: -25px;
+		margin-left: -50px;
+		margin-right: -55px;
+		margin-bottom: 50px;
 	}
 	.preprint {
 	   display: block;
-	   margin: 0 auto;
+
 	   text-align: center;
 	   width: 100%;
 	   padding: 10px;
-	   /* border: 2px solid rgba(255, 255, 255, 0.5); */
+
 	   background: #111;
-	   border-radius: 15px 15px 0 0;
 	   font-size: 22px;
-	   margin-bottom: 10px;
+	   
 	   border-bottom: 5px solid #7a0000;
 	   padding-bottom: 2px;
 	   strong{
@@ -26,7 +30,8 @@
 	   }
 	}
 	.video-container {
-		margin: 0px -50px;
+		margin: 0 -25px;
+		margin-right: -55px;
 		margin-top: -50px;
 		margin-bottom: 25px;
 		.video-area{
@@ -159,10 +164,18 @@
 //* MOBILE
 
 @media (max-width: 768px) {
-	.single .video-container .video-area{
-		margin: 0;
-		.video-holder{
-			width:100%;
+	.single {
+		.preprint-container{
+			
+		}
+		.video-container {
+			
+			.video-area{
+				margin: 0;
+				.video-holder{
+					width:100%;
+				}
+			}
 		}
 	}
 }
@@ -170,13 +183,22 @@
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
 	.single{
-		.video-container .video-area {
-			#chapters{
-			  width: 33.33333%;
-			  padding-right: 2px;
-			}
-			.video-holder{
-			  width: 66.66666%;
+		.preprint-container{
+			margin: -50px;
+		    margin-bottom: 50px;
+		}
+		.video-container {
+			margin: 0px -50px;
+			margin-top: -50px;
+			margin-bottom: 25px;
+			.video-area {
+				#chapters{
+				  width: 33.33333%;
+				  padding-right: 2px;
+				}
+				.video-holder{
+				  width: 66.66666%;
+				}
 			}
 		}
 		.wrap{
